--- a/Week_02/pom.xml
+++ b/Week_02/pom.xml
@@ -19,6 +19,12 @@
             <version>4.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.2-jre</version>
+        </dependency>
+
     </dependencies>
 
 </project>
