--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>Week_01</module>
         <module>Week_02</module>
+        <module>Week_03</module>
     </modules>
 
 
