--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>Week_02</module>
         <module>Week_03</module>
         <module>Week_04</module>
+        <module>Week_05</module>
+        <module>Week_05/common-bean</module>
     </modules>
 
 
