第七周作业

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>Week_04</module>
         <module>Week_05</module>
         <module>Week_05/common-bean</module>
+        <module>Week_07</module>
     </modules>
 
 
