--- a/Week_07/pom.xml
+++ b/Week_07/pom.xml
@@ -14,6 +14,7 @@
         <module>homework-01</module>
         <module>entity</module>
         <module>homework-02</module>
+        <module>homework-03</module>
     </modules>
 
     <artifactId>Week_07</artifactId>
