--- a/Week_07/homework-01/src/main/resources/META-INF/hikari.properties
+++ b/Week_07/homework-01/src/main/resources/META-INF/hikari.properties
@@ -1,4 +1,4 @@
-jdbcUrl=jdbc:mysql://127.0.0.1:3306/e_shop?useUnicode=true&characterEncoding=utf8&useSSL=false
+jdbcUrl=jdbc:mysql://127.0.0.1:3306/e_shop?useUnicode=true&characterEncoding=utf8&useSSL=false&rewriteBatchedStatements=true
 dataSource.user=root
 dataSource.password=123456
 
