--- a/Week_07/homework-03/src/main/resources/application.properties
+++ b/Week_07/homework-03/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.shardingsphere.datasource.names=master,second
 
 spring.shardingsphere.datasource.master.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.master.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.master.jdbc-url=jdbc:mysql://localhost:3306/e_shop?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
+spring.shardingsphere.datasource.master.jdbc-url=jdbc:mysql://localhost:3306/e_shop?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true
 spring.shardingsphere.datasource.master.username=root
 spring.shardingsphere.datasource.master.password=123456
 
 spring.shardingsphere.datasource.second.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.second.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.second.jdbc-url=jdbc:mysql://localhost:3306/e_shop_1?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
+spring.shardingsphere.datasource.second.jdbc-url=jdbc:mysql://localhost:3306/e_shop_1?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true
 spring.shardingsphere.datasource.second.username=root
 spring.shardingsphere.datasource.second.password=123456
 
